@@ -2,13 +2,16 @@
 Hash: SHA1
 
 AUX 30_mod_asn.conf 97 RMD160 acbd09f09d50ff3204ee7daa06f6df853a8d0d4f SHA1 a773800f8fce9c88e9192cd3084ee5b79fcde655 SHA256 bac00ab4084e1a1df1b4b5a66708060597b65998662e180385f628aee459400d
-EBUILD mod_asn-1.2.ebuild 659 RMD160 814964d4f0ea5ce8927e74c75f5a6b5b3ff10159 SHA1 7f6091a4a04fc79c61b2bbc6db1e433ff82cd868 SHA256 a8ab3c21a2139caa826847097e2292664fc6bcb4bb0dfe67d7bed2581fcf20b1
-MISC ChangeLog 456 RMD160 596a5fe70ba0a9cdf1a7bec3e9fa6776ddadfa28 SHA1 0d87356fd011da2079ca61e3023d9fc2688aeec1 SHA256 9d38ec976a6ddaa35acbd781346114f5ee537b4841ac17f19e2b54ab5473797f
+DIST mod_asn-1.2.tar.gz 20938 RMD160 c8a0b8a46f8950c6f2908eb6f2c1306d433d558b SHA1 b2356de7c890b1808f18d3d0995010ebb54427c3 SHA256 8503e273dc2eab1f06e3a805ff5b9477c190c63dbdf7e4969ec92b326db94000
+DIST mod_asn-1.3.tar.gz 21228 RMD160 979f74037004d0c6aca54f87337886bf723f2ed2 SHA1 50f4821915162ad8796db5ac3369b964f4245704 SHA256 595c2da750a70805d02a1b145b3cad3e1277a1b62ffd18be3b50231d9500485d
+EBUILD mod_asn-1.2-r1.ebuild 642 RMD160 e98d1d94fde6110c8e1be6eed7acd79fd9c5aed8 SHA1 e5cfdf567c0ea0302b1fdb2489d2eaa6a670ebc4 SHA256 5329c34a6206f7ed27338f57bee97be72e53cf9041fd37854412c9a8f337105f
+EBUILD mod_asn-1.3.ebuild 653 RMD160 38706ed84e0b6101eba7cc42b76d81fc70d02b05 SHA1 244406d08450120a7a5179370119ea3ce08b3c44 SHA256 458d84e4a0f2df57e36bb2198b65049be0974da9933dc47448c396c1ecae517a
+MISC ChangeLog 684 RMD160 10627c759bbc73e37a3974b433194778a81efeed SHA1 ce011a1b99edab86233e22503a2a93e9201962fc SHA256 e1b76f7779aaf369e82dbc8452bfcf06447a121cad25f12c545c9b3f212a7597
 MISC metadata.xml 363 RMD160 5044e3fa95a31936f6be5e4e95a84725b382a5d4 SHA1 185523bcdd1175016489e3a0385d1d085318a2ca SHA256 55dccd3f642cf5f8c99c158990805fca27ea49a1e2a81869f31280d5c18d9b69
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFKlTVwQW+hXSf0t0IRAvZUAKC4PnzII29LzsxaNuCdDYfpHTpX6QCgyK7h
-vQvQr95933PygI98fyYml5k=
-=5WlC
+iD8DBQFLKdpdQW+hXSf0t0IRAj2TAJ48NW4FPZjda9KcnQScduV4B73kywCff8BT
+vvi19J3r01iDwB2FMPqnCoc=
+=+6AI
 -----END PGP SIGNATURE-----
